--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,22 @@
 /* styles go here */
-.form-field {
+.formField {
   display: block;
   margin-bottom: 10px;
 }
 
-.form-field-cats {
+.formFieldCats {
   display: inline-block;
   margin-bottom: 10px;
 }
 
-.conteiner {
+.fieldset {
   margin-bottom: 20px;
+}
+
+.fieldset:last-child {
+  margin: unset;
+}
+
+.formField:last-child {
+  margin: unset;
 }
